--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
     padding:0;
     box-sizing: border-box;
 }
+body{
+    /* overflow-x:hidden; */
+}
 .container{
     margin:0 auto;
     background-color: var(--Vary-Light-Gray);
@@ -39,9 +42,13 @@ a{
     right:0px;
     width:30vw;
     height:35vh;
-    top:113vh;
+    top:97vh;
     z-index: 1;
     position: absolute;
+}
+.background3,
+.background4{
+    display: none;
 }
 header{
     display: flex;
@@ -71,6 +78,7 @@ header nav li{
     /* border:2px solid black; */
     font-size: 19px;
     list-style: none;
+    font-weight: 600;
 }
 .hamburger{
     z-index: 2;
@@ -78,6 +86,10 @@ header nav li{
 .close{
     display: none;
     z-index: 2;
+}
+.navBtn{
+    display: none;
+    z-index: 3;
 }
 .illustration{
     width:90%;
@@ -94,11 +106,15 @@ section{
     background-color: var(--Vary-Light-Gray);
 }
 h2{
-    font-size: 30px;
+    font-size: 32px;
     padding:20px;
     color:var(--Dark-Blue);
     z-index:2;
+    width:100%;
     line-height: 2.5rem;
+    text-align: center;
+    z-index: 2;
+    position: relative;
 }
 h3{
     font-size: 15px;
@@ -110,8 +126,9 @@ p{
     font-size: 17px;
     padding:20px 25px;
     line-height: 1.7rem;
-    z-index:-1;
+    z-index:2;
     color:var(--Dark-Grayish-Blue);
+    position: relative;
 }
 button{
     cursor: pointer;
@@ -133,6 +150,8 @@ section .aside{
     background-color: var(--Very-Pale-Red);
     margin:10px 0px 10px 25px;
     border-radius: 15px 0 0 15px;
+    z-index: 3;
+    position: relative;
 }
 section .aside h3{
     background-color: var(--Bright-Red);
@@ -159,17 +178,20 @@ section .aside h4{
 }
 .testimonial{
     margin:0;
+    position: relative;
+    z-index: 3;
 }
 .testimonial h2{
     margin:50px 0;
 }
 .testimonial aside{
     position: relative;
-    background-color:rgba(211, 211, 211, 0.302);
+    background-color:rgba(211, 211, 211, 0.872);
     margin:20px 15px;
     padding:-5px 10px 10px;
     text-align: center;
-    /* position: absolute; */
+    position: absolute;
+    z-index: -2;
 }
 .testimonial aside img{
     width:25%;
@@ -182,6 +204,8 @@ section .aside h4{
     justify-content: center;
     align-items: center;
     margin: 30px 0;
+    position: relative;
+    top:350px
 }
 .testimonial div small{
     width:10px;
@@ -194,6 +218,10 @@ section .aside h4{
 .testimonial div small.active{
     background-color: var(--Bright-Red);
 }
+.testimonialBtn{
+    position: relative;
+    top:330px;
+}
 .testimonial .simplify{
     background-image: url(images/bg-simplify-section-mobile.svg);
     background-repeat: no-repeat;
@@ -201,6 +229,8 @@ section .aside h4{
     background-color: var(--Bright-Red);
     padding:90px 45px;
     margin:20px 0 0;
+    position: relative;
+    top:330px;
 }
 .testimonial .simplify h2{
     color:white;
@@ -218,17 +248,19 @@ section .aside h4{
 }
  footer{
     background-color: var(--Very-Dark-Blue);
-    padding:20px;
-    /* display: flex;
+    padding:30px 20px;
+     display: flex;
     justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;  */
+    align-items: flex-start;
+    flex-wrap: wrap;
+    position: relative;
+    top:330px;
 }
 footer label{
     width:100%;
 }
 footer input{
-    width:70%;
+    width:60%;
     height:40px;
     border-radius: 20px;
     padding:10px 20px;
@@ -236,17 +268,415 @@ footer input{
     border:none;
     font-size: 15px;
 }
-/*footer button{
+footer button{
     box-shadow: none;
     margin:0 5px;
-}*/
-footer section{
-    background-color: transparent;
 }
-footer section p{
+footer span p{
     color: #fff;
 }
 footer .nav{
-    border:2px solid white;
-    /* width:40%; */
+    margin:20px 0;
 } 
+footer .icon{
+    width:100%;
+    /* border:2px solid wheat; */
+    text-align: center;
+    padding:20px 0;
+}
+footer .icons{
+    margin:5px 10px;
+}
+footer .iconImg{
+    width:100%;
+    text-align: center;
+}
+footer .logo{
+    filter:invert(300%);
+    /* padding:20px 90px; */
+}
+footer .copyrightBox{
+    width:100%;
+    /* border:2px solid wheat; */
+    text-align: center;
+}
+footer .copyright{
+    margin:5px 0;
+    font-size: 15px;
+}
+footer .attribution{
+    color:white;
+    text-align: center;
+    width:100%;
+}
+@media screen and (min-width:700px) {
+    header{
+        justify-content: space-between;
+        z-index: 1;
+        /* border:2px solid black; */
+        background-color: white;
+    }
+    header nav{
+        position: relative;
+        top:0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-self: flex-end;
+        z-index: -2;
+    }
+    header nav li{
+        z-index: -1;
+        position: relative;
+    }
+    .hamburger,
+    .close{
+        display: none;
+    }
+    .background{
+        z-index: ;
+    }
+    .background2{
+        top:65vh;
+        right:-100px;
+    }
+    main section:first-child{
+        padding: 0;
+    }
+    main section:first-child div{
+        /* border:2px solid black; */
+        padding:30px 150px;
+    }
+    main section:nth-child(2){
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       flex-wrap:wrap;
+    }
+    main .flex-container{
+        position: relative;
+        top:0;
+        z-index:3;
+        flex-direction: row;
+    }
+    main section div:first-child{
+        width:100%;
+    }
+    main section:nth-child(2) .aside-container{
+        width:32%;
+        /* border:2px solid black; */
+    }
+    main section:nth-child(2) .aside-container .aside{
+        text-align: left;
+        border-radius: 20px;
+    }
+    main section:nth-child(2) .aside-container .aside h4{
+        font-size: 12px;
+    }
+    footer{
+        align-items: center;
+    }
+    footer input{
+        width:80%;
+    }
+    footer .icon{
+        width:30%;
+        margin:20px 0;
+    }
+    footer .copyright{
+        width:100%;
+    }
+}
+@media screen and (min-width:1000px) {
+    h2{
+        margin:0;
+        padding:0;
+    }
+    header{
+        justify-content: space-around;
+        padding:0;
+    }
+    header nav{
+        width:60%;
+    }
+    header nav li{
+        z-index:3;
+    }
+    .navBtn{
+        margin:0;
+        display: block;
+        z-index: 4;
+        position: relative;
+    }
+    .background1{
+        z-index:1;
+        height: 90vh;
+        width:50vw;
+        top:-20px;
+        right:-50px;
+    }
+    .background2{
+        display: none;
+        right:auto;
+        transform: rotate(360deg);
+        left:0;
+    }
+    main section{
+        /* border:2px solid black; */
+        padding:10px 20px;
+    }
+    main section:first-child{
+        /* bordeR:2px solid green; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row-reverse;
+        padding:20px;
+    }
+    main section:first-child div{
+        width:60%;
+        /* border:2px solid black; */
+        padding:10px;
+        text-align: left;
+        margin:0 100px 0 0;
+    }
+    main section:first-child div h2{
+        padding:20px 0;
+        margin:0;
+        /* border:2px solid black; */
+        text-align: left;
+    }
+    main section:first-child div p{
+        text-align: left;
+        padding: 20px 0;
+    }
+    main section:first-child img{
+        width:50%;
+    }
+    main section:nth-child(2){
+        flex-wrap: nowrap;
+        align-items: flex-start;
+    }
+    main section div:first-child{
+        width:115%;
+        margin:0 100px 0 0;
+        text-align: left;
+        /* border:2px solid red; */
+    }
+    main section div:first-child h2,
+    main section div:first-child p{
+        padding:20px 0px;
+        text-align: left;
+    }
+    main section div:first-child p{
+        padding:10px 50px 10px 10px;
+    }
+    main section:nth-child(2).flex-container div{
+        /* border:2px solid yellow; */
+        padding:10px 50px 10px 0;
+    }
+    main section:nth-child(2).flex-container div p{
+        /* border:2px solid yellow; */
+        padding:10px 25px;
+    }
+    main section:nth-child(2) .flex-container{
+        /* width:50%; */
+        padding: 0;
+        margin:0;
+        flex-direction: column;
+        /* border:2px solid green; */
+    }
+    main section:nth-child(2) .aside-container{
+        width:100%;
+        /* border:2px solid black; */
+    }
+    main section:nth-child(2) .aside-container .aside{
+        text-align: left;
+        border-radius: 20px 0px 0px 20px;
+        background-color: transparent;
+    }
+    main section:nth-child(2) .aside-container .aside h4{
+        font-size: 15px;
+    }
+    main section:nth-child(2) .aside-container p{
+        font-size: 14.6px;
+    }
+    .testimonial{
+        position: relative;
+        top:0;
+        margin:0;
+        padding:20px 0 0;
+    }
+    .testimonial section{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        /* flex-wrap: wrap;*/
+        overflow-x: hidden; 
+        width:150%;
+        padding:0;
+        background-color: transparent;
+    }
+    .testimonial h2{
+        width:100%;
+    }
+    .testimonial aside{
+        position: relative;
+        width:30%;
+        top:30px;
+    }
+    .testimonial .testimonialNav{
+        position: relative;
+        top:auto;
+    }
+    .testimonial .testimonialBtn{
+        top:0;
+    }
+    .testimonial .simplify{
+        top:0;
+        margin:0;
+    }
+    footer{ 
+        top:0;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    footer label{
+        order:6;
+        position: absolute;
+        text-align: right;
+        width:100%;
+        padding:0 10px 0 0;
+        /* border:2px solid green; */
+    }
+    footer input{
+        width:20%;
+    }
+    footer span:nth-child(2){
+        /* border:2px solid green; */
+        order:2;
+        margin:0 30px 0 0;
+    }
+    footer span:nth-child(3){
+        /* border:2px solid cadetblue; */
+        order:3;
+        position: relative;
+        top:-20px;
+    }
+    footer span:nth-child(4){
+        /* border:2px solid red; */
+        order:2;
+        position: absolute;
+        left:10px;
+        top:130px;
+    }
+    footer span:nth-child(5){
+        /* border:2px solid cadetblue; */
+        order:1;
+        width:30%;
+        position: absolute;
+        left: 10px;
+        top:50px;
+    }
+    footer span:nth-child(6){
+        /* border:2px solid cadetblue; */
+        order:5;
+        position: absolute;
+        right:0;
+        bottom:30px;
+        width:35%;
+    }
+    footer div:last-child{
+        /* border:2px solid cadetblue; */
+        order:7;
+    }
+}
+
+@media screen and (min-width:1300px) {
+    header{
+        padding:0px 80px;
+    }
+    .background2{
+        display:block;
+        top:120vh;
+        left:-450px;
+        height:100vh;
+        width:200vw;
+    }
+    main section:first-child{
+        padding:10px 100px;
+        /* border:2px solid firebrick; */
+    }
+    main section:first-child div h2{
+        padding:10px 100px 10px 0;
+        font-size: 40px;
+        line-height: 3rem;
+        /* border:1px solid darkblue; */
+    }
+    main section:first-child div p{
+        padding:25px 90px 25px 0;
+    }
+    main section:nth-child(2){
+        /* border:2px solid cadetblue; */
+        padding:10px 100px;
+    }
+    .testimonial{
+        background-color: transparent;
+    }
+    .testimonial section{
+        width:180%;
+        position: relative;
+        left: -130px;
+        align-items: flex-start;
+        background-color: transparent;
+    }
+    .testimonial .testimonialNav{
+        display: none;
+    }
+    .testimonial .simplify{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding:90px 90px;
+        background-image: none;
+        margin:20px 0 0;
+    }
+    .testimonial .simplify h2{
+        /* border:2px solid black; */
+        width:40%;
+        line-height: 3rem;
+        text-align: left;
+        font-size: 40px;
+    }
+    .testimonial .simplifybutton{
+        padding:30px 40px;
+    }
+    .background3{
+        height:40vh;
+        transform: rotate(195deg);
+        width:10vw;
+        top:0;
+        background-position:;
+        opacity: .2;
+        /* background-size: cover; */
+        left:850px;
+        position: absolute;
+        /* border:2px solid black; */
+    }
+    .background4{
+        /* display: none; */
+        height:85vh;
+        width:40vw;
+        transform: rotate(180deg);
+        left:120px;
+        top:-15px;
+        opacity:.2;
+    }
+    footer{
+        z-index: 3;
+    }
+    footer label{
+        right:70px;
+    }
+}
