--- a/style.css
+++ b/style.css
@@ -192,6 +192,10 @@ section .aside h4{
     text-align: center;
     position: absolute;
     z-index: -2;
+    visibility: hidden;
+}
+.testimonial aside:nth-child(2){
+    visibility: visible;
 }
 .testimonial aside img{
     width:25%;
@@ -631,6 +635,9 @@ footer .attribution{
         align-items: flex-start;
         background-color: transparent;
     }
+    .testimonial aside{
+        visibility: visible;
+    }
     .testimonial .testimonialNav{
         display: none;
     }
@@ -647,7 +654,7 @@ footer .attribution{
         width:40%;
         line-height: 3rem;
         text-align: left;
-        font-size: 40px;
+        font-size: 35px;
     }
     .testimonial .simplifybutton{
         padding:30px 40px;
